# phrase-app-python-i18n

./: .coveragerc  .gitignore  LICENSE-MIT  README.rst  main.py  pyproject.toml  setup.py
locales/: main.pot
locales/el/LC_MESSAGES/: base.mo  base.po
locales/en/LC_MESSAGES/: base.mo  base.po
